--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "webpack-dev-server": "^2.11.0"
   },
   "author": "Nalivayko Alex",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "extract-text-webpack-plugin": "^3.0.2"
+  }
 }
