--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack -p --watch --progress"
   },
   "dependencies": {
+    "@reactscreens/swiper": "0.0.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-regenerator": "^6.26.0",
@@ -20,6 +21,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.9",
     "img-loader": "^2.0.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "qs": "^6.5.1",
     "react": "^15.4.0",
