--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --progress",
-    "build": "webpack -p --watch --progress"
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
   },
   "dependencies": {
-    "@reactscreens/swiper": "0.0.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-regenerator": "^6.26.0",
@@ -24,20 +23,19 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "qs": "^6.5.1",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-router": "^3.2.0",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "1.0.17",
-    "react-swipe-card": "^0.1.4",
+    "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.77.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.0"
+    "semantic-ui-react": "^0.78.3",
+    "webpack": "^4.1.1",
+    "webpack-dev-server": "^3.1.1"
   },
   "author": "Nalivayko Alex",
   "license": "ISC",
